# ChangeLog for games-fps/quake3-bin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-bin/ChangeLog,v 1.10 2006/03/27 18:43:12 wolf31o2 Exp $

*quake3-bin-1.32b-r5 (27 Mar 2006)

  27 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bin-1.31.ebuild, quake3-bin-1.32b-r4.ebuild,
  +quake3-bin-1.32b-r5.ebuild:
  Added initial support for quake3-teamarena.

  22 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bin-1.31.ebuild, quake3-bin-1.32b-r4.ebuild:
  Fixed up dedicated USE invocation so we only copy the dedicated files when
  necessary and synced 1.32b to 1.31 ebuild. Also added code to properly
  symlink pak0.pk3 from baseq3 and missionpack, if USE=cdinstall.

  15 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bin-1.31.ebuild, quake3-bin-1.32b-r4.ebuild:
  Changed to use idsoftware thirdpartymirror.

  17 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bin-1.32b-r4.ebuild:
  Added built_with_use check on cdinstall for quake3-data for bug #123148.

  05 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-bin-1.31.ebuild, -quake3-bin-1.32b-r3.ebuild,
  quake3-bin-1.32b-r4.ebuild:
  Adding modular X dependencies and removing older revision of 1.32b ebuild.

  12 Nov 2005; Luca Barbato <lu_zero@gentoo.org> quake3-bin-1.32b-r3.ebuild:
  Dependency update: media-video/ati-drivers -> x11-drivers/ati-drivers.

  12 Nov 2005; Luca Barbato <lu_zero@gentoo.org> quake3-bin-1.31.ebuild:
  Dependency update: media-video/ati-drivers -> x11-drivers/ati-drivers.

  12 Nov 2005; Luca Barbato <lu_zero@gentoo.org> quake3-bin-1.32b-r4.ebuild:
  Dependency update: media-video/ati-drivers -> x11-drivers/ati-drivers.

*quake3-bin-1.32b-r4 (24 Oct 2005)

  24 Oct 2005; Mike Frysinger <vapier@gentoo.org> +quake3-bin-1.32b-r4.ebuild:
  Rename package to quake3-bin and add support for quake3-data package.
