@@ -1,15 +1,15 @@
-MD5 8e31fefa99e7f564639dd2df3c82e106 ChangeLog 5806
-RMD160 48b8917bb27d55f867dbe3449f561270b7d6c31f ChangeLog 5806
-SHA256 a358d3add1360effdeaf1c3eea0b7b43cb056f8a9116941baec01266cd696a8f ChangeLog 5806
+MD5 8bf6d2efb34b3d88e5c9015f8dac84fe ChangeLog 6128
+RMD160 fc369ca02c6b5cd86438bdad6d32578b2ca401eb ChangeLog 6128
+SHA256 eea0befb6f592e85e701516a468c53d632af4701ba9bdb46f46f35c947898318 ChangeLog 6128
 MD5 aa25102bc1d29a9d3cef6ccb88b87833 files/digest-quake3-bin-1.31 73
 RMD160 084f01025559c82469e11dda19bc3c2353071bc2 files/digest-quake3-bin-1.31 73
 SHA256 c27c9a3d460c1225b266681f375e8a4b6e05310094eb81beced1871115064725 files/digest-quake3-bin-1.31 73
 MD5 ac0eeb5bcea4995d27e0c6575b8f4dbb files/digest-quake3-bin-1.32b-r4 76
 RMD160 619670e44685690f2ce6bb9f4693b7e31f9b4428 files/digest-quake3-bin-1.32b-r4 76
 SHA256 8e94e99e4b05c413ff0330a3dffe98b56eb8ebe575d8e62ebb27129df9eb03af files/digest-quake3-bin-1.32b-r4 76
-MD5 0028b4a419fef22709b613a6b700eced files/digest-quake3-bin-1.32b-r5 274
-RMD160 7d1a30b298ae3fbecfebd4d45fff72e865e7ffa4 files/digest-quake3-bin-1.32b-r5 274
-SHA256 462e3f3a4440df59c419f69195975ed4f50bdf9986427801c40bf8a86fc3f874 files/digest-quake3-bin-1.32b-r5 274
+MD5 0028b4a419fef22709b613a6b700eced files/digest-quake3-bin-1.32b-r6 274
+RMD160 7d1a30b298ae3fbecfebd4d45fff72e865e7ffa4 files/digest-quake3-bin-1.32b-r6 274
+SHA256 462e3f3a4440df59c419f69195975ed4f50bdf9986427801c40bf8a86fc3f874 files/digest-quake3-bin-1.32b-r6 274
 MD5 72c65c35c66233c80ad323c2e003f09e files/q3ded.conf.d 307
 RMD160 8abab77c1ef7e7fd57c42094e8870ab5f918d21f files/q3ded.conf.d 307
 SHA256 b9ba53020ff1da7bbd5b8c37d21435ea499b164d7a45c79a2a75d2c96e41f701 files/q3ded.conf.d 307
@@ -25,6 +25,6 @@ SHA256 4814671640ba6cce7a0b6206e6e1ca68ab132b61a37a1bcb0aeaf251ac55b996 quake3-b
 MD5 6a80906e2fb1f98c305792dd5fb61ddc quake3-bin-1.32b-r4.ebuild 3052
 RMD160 057bc5b02703894d43ffaf5dd7eae49243899671 quake3-bin-1.32b-r4.ebuild 3052
 SHA256 6e563671a5ede3d8a14627e098b0ca41f14f5a9dd72a6956c858a164d2f30d6e quake3-bin-1.32b-r4.ebuild 3052
-MD5 da745d3984c67514002a27c27e7a53bf quake3-bin-1.32b-r5.ebuild 3241
-RMD160 e80f06951b3200d559f014c8d3e33ca87c1e34b3 quake3-bin-1.32b-r5.ebuild 3241
-SHA256 3941e40be805097bb81a91b26a2f11fa82484363cc01572dbdaa3947059e291e quake3-bin-1.32b-r5.ebuild 3241
+MD5 ea97adf1383970b07ec8d9e33e56c6a6 quake3-bin-1.32b-r6.ebuild 3394
+RMD160 c5c6f8a63eb677434691f9bb4059071c41b58085 quake3-bin-1.32b-r6.ebuild 3394
+SHA256 e267e59066afc84ac9768b8c75f573db9fc5cd98860aef28b4d4c49e84a4f7c8 quake3-bin-1.32b-r6.ebuild 3394
