@@ -1,12 +1,18 @@
-MD5 998eec0185286c4669d471cb6ba98d13 ChangeLog 1921
-RMD160 ab7706414f7eac66c005276b365b8755edc9bc8e ChangeLog 1921
-SHA256 00af27a340d5e41b9b2051a4e77a43b650f3517b367c3f1eaf5e144ef3696c91 ChangeLog 1921
+MD5 c9232aefd6efb0f98c3c9abff51de5c6 ChangeLog 2102
+RMD160 46fbd4bb2b948f32b8b43a9d01fdea95bb816c21 ChangeLog 2102
+SHA256 aa2856fec0fe66c1e3aa47d7f1c130e24b94a4ed9faa6bce800617d5489c0e82 ChangeLog 2102
 MD5 ad34f8ffdd4f64dea0130b33ac443011 files/digest-quake4-bin-1.0.6 73
 RMD160 82faecb90a441c6f71266bb3a5d1e4cbee77bf46 files/digest-quake4-bin-1.0.6 73
 SHA256 dc3e8a2d421a6a84bd9cd54d530c54a263878a83c9c7ca640f80d8c64512b762 files/digest-quake4-bin-1.0.6 73
+MD5 1f16a9fcd4a24238aecb3ec650ad0442 files/digest-quake4-bin-1.0.6-r1 265
+RMD160 b17c4fcffee77e1666137c9259ff29b51fa99626 files/digest-quake4-bin-1.0.6-r1 265
+SHA256 66d98cd5ef3c1b2cc68342a57f1ba201786f35e750e50db76fe932f76ea5aa09 files/digest-quake4-bin-1.0.6-r1 265
 MD5 67bc63233267502c576573939ca95ae9 metadata.xml 1046
 RMD160 4533166e73a6c0c048441279409fe8c52875b974 metadata.xml 1046
 SHA256 4c04b0b912807688e3536ea7318cdbe28858bc462e339b6cc8d4e491d167caf8 metadata.xml 1046
+MD5 ac1a797d1a3d7e70ca28df92172814d0 quake4-bin-1.0.6-r1.ebuild 2896
+RMD160 1af67ca4b56c560f42a93dba360123b4235e907d quake4-bin-1.0.6-r1.ebuild 2896
+SHA256 d0c529a478aff2c88b2e7ff2fde9897fe59af8d4aac1e2bf6b0db805dd912c80 quake4-bin-1.0.6-r1.ebuild 2896
 MD5 c5716e74b8f9bebedd1f274a67b1f3dd quake4-bin-1.0.6.ebuild 2693
 RMD160 dea336ab19abd238bdb4e31f9c57284a21e1e331 quake4-bin-1.0.6.ebuild 2693
 SHA256 b3e53b538e82a043412b94cfaa25ef7612b6b3e7baaccccd8a368d7cd0644ac8 quake4-bin-1.0.6.ebuild 2693
