@@ -1,6 +1,14 @@
 # ChangeLog for games-fps/quake3-bin
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-bin/ChangeLog,v 1.10 2006/03/27 18:43:12 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-bin/ChangeLog,v 1.11 2006/03/31 00:55:35 wolf31o2 Exp $
+
+*quake3-bin-1.32b-r6 (31 Mar 2006)
+
+  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  -quake3-bin-1.32b-r5.ebuild, +quake3-bin-1.32b-r6.ebuild:
+  Made some general code cleanups and removing older revision. Inspired by bug
+  #127934 and Paul Bredbury's uncanny ability to point out how I could do
+  ebuilds better.
 
 *quake3-bin-1.32b-r5 (27 Mar 2006)
 
